@@ -1,5 +1,9 @@
 Changes with Apache 1.3.15
 
+  *) Fix Range header processing to properly parse the syntax specified
+     in RFC 2616, and properly handle unsatisfiable requests by returning
+     a 416 error. PR#6973 [Tony Finch, William Rowe]
+
   *) Remove some human-readable fluff from the machine-readable mod_status
      display. PR#7025 [Youichirou Koga <y-koga@apache.or.jp>]
 
